# shu-syllabus

./: LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
data/: bundle.py  update.py
data/syllabus/2023/: 1000600A.json  1000810A.json  1000810B.json  1000820A.json  1000820B.json  1000900A.json  1001000A.json  1001200A.json  1001300A.json  1001400A.json  1001500A.json  1001600A.json  1001700A.json  1001800A.json  1001800B.json  1001800C.json  1001900A.json  1002000A.json  1002100A.json  1002300A.json  1002400A.json  1002500A.json  1002700A.json  1002800A.json  1002900A.json  1003000A.json  1003100A.json  1003200A.json  1003300A.json  1003800A.json  1003900A.json  1004100A.json  1004200A.json  1004300A.json  1004400A.json  1004700A.json  1004800A.json  1005100A.json  1005410A.json  1005510A.json  (+480 more)
data/syllabus/2024/: 1000500A.json  1000600A.json  1000810A.json  1000810B.json  1000820A.json  1000820B.json  1001200A.json  1001300A.json  1001400A.json  1001500A.json  1001600A.json  1001700A.json  1001800A.json  1001900A.json  1002300A.json  1002400A.json  1002500A.json  1002700A.json  1003100A.json  1003200A.json  1003300A.json  1004100A.json  1004200A.json  1004300A.json  1004400A.json  1004700A.json  1004800A.json  1005410A.json  1005510A.json  1005600A.json  1005700A.json  1006200A.json  1007000A.json  1007000AA.json  1007000AB.json  1007000AC.json  1007000AD.json  1007000AE.json  1007000B.json  1007000C.json  (+552 more)
src/shu_syllabus/: __init__.py  aaa.py  aspnet.py  load_syllabus.py  load_syllabuses.py  syllabus_data.py  syllabus_search.py  utils.py
(+2 files in other folders)
